# dataset-policy-gradients

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  custom_metagrad_reward.py  example_slurm_launch_all.sh  install-verl-env.sh  requirements-server.txt  requirements-verl.txt  run_dpg_baseline_local.sh  run_dpg_local.sh  yaml_to_hydra.py
custom_eleuther_evals/: lambada_mt_de.yaml  lambada_mt_en.yaml  lambada_mt_es.yaml  lambada_mt_fr.yaml  lambada_mt_it.yaml  uuid.yaml
dataset_metagradients_jax/: README.md  pyproject.toml
dataset_metagradients_jax/scripts/: metagrad_server.py  rick_roll.npy
dataset_metagradients_jax/src/: __init__.py  checkpointing.py  config.py  eleuther_benchmark.py  memory_efficient_trainer.py  model.py  optim.py  train_utils.py  utils.py
dataset_metagradients_jax/tests/: __init__.py  test_compare_easydel_and_hf_model.py  test_language_modeling.py  test_metagrad_correctness.py  test_metagrad_run.py
dataset_metagradients_jax/tests/conf/: config.yaml  metagrad_test.yaml
dataset_metagradients_jax/tests/conf/model/: large.yaml
experiment_configs/67_experiments/: verl_llama3.2_instruct_bs2048.yaml  verl_llama3.2_instruct_bs2048_groupless_advantage.yaml  verl_llama3.2_instruct_bs24576.yaml  verl_llama3.2_instruct_bs24576_groupless_advantage.yaml  verl_llama3.2_instruct_bs256.yaml  verl_llama3.2_instruct_bs256_groupless_advantage.yaml
experiment_configs/67_experiments/adam/: metagrad_server_cross_group_batching_gpt2_67.yaml  metagrad_server_no_cross_group_batching_gpt2_67.yaml
experiment_configs/67_experiments/naive/: metagrad_server_gpt2_67.yaml
experiment_configs/67_experiments/sgd/: metagrad_server_cross_group_batching_gpt2_67.yaml
experiment_configs/l2_norm_experiments/: verl_llama3.2_instruct_bs2048.yaml  verl_llama3.2_instruct_bs2048_groupless_advantage.yaml  verl_llama3.2_instruct_bs24576.yaml  verl_llama3.2_instruct_bs24576_groupless_advantage.yaml  verl_llama3.2_instruct_bs256.yaml  verl_llama3.2_instruct_bs256_groupless_advantage.yaml
experiment_configs/lambada_experiments/: verl_llama3.2_instruct.yaml  verl_llama3.2_instruct_groupless_advantage.yaml
experiment_configs/qr_code_experiments/: verl_llama3.2_instruct.yaml
experiment_configs/uuid_experiments/: verl_llama3.2_instruct.yaml  verl_llama3.2_instruct_groupless_advantage.yaml
prompt_data/: wikipedia_test.parquet  wikipedia_test_large.parquet  wikipedia_train.parquet  wikipedia_train_large.parquet
(+31 files in other folders)
